--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -6,10 +6,6 @@
 name: Ansible Molecule
 
 on:
-  # Schedule updates (once weekly)
-  schedule:
-    - cron: '43 22/9 * * 0,1'
-  workflow_dispatch:
   push:
     branches:
       - master
@@ -18,6 +14,11 @@ on:
     paths-ignore:
       - '**/README.md'
       - '**/CHANGELOG.md'
+    tags_ignore:
+      - '*'
+  pull_request:
+  schedule:
+    - cron: '43 22 22 * *'
 
 concurrency:
   group: ${{ github.ref }}-${{ github.workflow }}
@@ -29,12 +30,8 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v3
-        with:
-          path: "${{ github.repository }}"
-      - name: molecule
-        uses: buluma/molecule-action@v5.0.1
-        with:
-          command: lint
+      - name: ansible-lint
+        uses: ansible-community/ansible-lint-action@main
   test:
     needs:
       - lint
@@ -45,12 +42,10 @@ jobs:
         config:
           - image: "debian-systemd"
             tag: "latest"
-          - image: "debian-systemd"
-            tag: "bookworm"
           - image: "fedora-systemd"
-            tag: "35"
+            tag: "36"
           - image: "fedora-systemd"
-            tag: "34"
+            tag: "37"
           - image: "fedora-systemd"
             tag: "latest"
           - image: "enterpriselinux"
@@ -65,6 +60,8 @@ jobs:
             tag: "focal"
           - image: "docker-ubuntu-systemd"
             tag: "bionic"
+          - image: "docker-ubuntu-systemd"
+            tag: "lunar"
     steps:
       - name: checkout
         uses: actions/checkout@v3
@@ -75,7 +72,7 @@ jobs:
       - name: parse apparmor for mysql
         run: sudo apparmor_parser -R /etc/apparmor.d/usr.sbin.mysqld
       - name: molecule
-        uses: buluma/molecule-action@v5.0.1
+        uses: buluma/molecule-action@v5.0.7
         with:
           image: ${{ matrix.config.image }}
           tag: ${{ matrix.config.tag }}
