--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -57,8 +57,6 @@ jobs:
           - image: "fedora-systemd"
             tag: "rawhide"
           - image: "enterpriselinux"
-            tag: "7"
-          - image: "enterpriselinux"
             tag: "8"
           - image: "enterpriselinux"
             tag: "latest"
@@ -68,6 +66,10 @@ jobs:
             tag: "focal"
           - image: "docker-ubuntu-systemd"
             tag: "bionic"
+          - image: "docker-ubuntu-systemd"
+            tag: "lunar"
+          - image: "docker-ubuntu-systemd"
+            tag: "noble"
     steps:
       - name: Checkout Role
         uses: actions/checkout@v4
@@ -89,7 +91,7 @@ jobs:
       - uses: "actions/checkout@master"
       - name: Dependabot metadata
         id: metadata
-        uses: dependabot/fetch-metadata@v1
+        uses: dependabot/fetch-metadata@v2
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Approve a PR
