--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,10 +1,10 @@
 ---
 galaxy_info:
-  role_name: victoriametrics
   author: buluma
-  description: Ansible role for installing and configuring victoriametrics storage backend
-  license: "Apache-2.0"
-  min_ansible_version: "2.12"
+  role_name: victoriametrics
+  description: 'Ansible role for installing and configuring victoriametrics storage backend'
+  license: Apache-2.0
+  min_ansible_version: 2.12
   platforms:
     - name: Debian
       versions:
