--- a/meta/main.yml
+++ b/meta/main.yml
@@ -4,7 +4,7 @@ galaxy_info:
   role_name: victoriametrics
   description: 'Ansible role for installing and configuring victoriametrics storage backend'
   license: Apache-2.0
-  min_ansible_version: 2.12
+  min_ansible_version: '2.12
   platforms:
     - name: Debian
       versions:
